@startuml
[*] --> NEW : Initial State

NEW --> PENDING_CONFIRMATION : BOOK_PARKING_SLOT\n[confirmBookingAction]
NEW --> CANCELLED : BOOKING_CANCELLED\n[cancelBookingAction]

PENDING_CONFIRMATION --> CONFIRMED : BOOKING_CONFIRMED
PENDING_CONFIRMATION --> DECLINED : BOOKING_FAILED
PENDING_CONFIRMATION --> CANCELLED : BOOKING_CANCELLED\n[cancelBookingAction]

CONFIRMED --> ACTIVE : VEHICLE_PARKED
CONFIRMED --> CANCELLED : BOOKING_CANCELLED\n[cancelBookingAction]

ACTIVE --> OVERSTAY : OVERSTAY_OCCURRED
ACTIVE --> COMPLETED : BOOKING_COMPLETED

CANCELLED --> [*]
COMPLETED --> [*]
DECLINED --> [*]
OVERSTAY --> COMPLETED : BOOKING_COMPLETED

@enduml